syntax = "proto3";

service AuthService {
    rpc CreateToken (ICreateToken) returns (ITokenObject) {}
    rpc VerifyToken (ITokenObject) returns (IVerifyTokenRes) {}
}

message ICreateToken {
    string deviceId = 1;
    string devicetype =2;
    string tokenType = 3;
}

message ITokenObject {
    string token = 1;
}

message IVerifyTokenRes {
    string tokenType = 1;
    string deviceId = 2;
    string devicetype = 3;
}